[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["georg <georbearwolf.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
selenium = "4.14.0"
beautifulsoup4 = "4.12.2"
webdriver-manager = "4.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
